# credly-api-integration

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: lambda_function.py  requirements-tests.txt  requirements.txt
app/src/auth/: token_provider.py
app/src/clients/: credly_client.py  dynamodb_client.py  http_client.py  secrets_manager.py  ssm_client.py
app/src/config/: settings.py
app/src/services/: credly_badges_service.py  credly_templates_service.py
app/src/utils/: logger.py  observability.py  s3_writer.py
app/tests/: conftest.py  test_badge_mapping.py  test_credly_services.py
auth/: token_provider.py
clients/: credly_client.py  dynamodb_client.py  http_client.py  secrets_manager.py
config/: settings.py
handlers/: credly_ingestion_handler.py
infra/: .gitignore  .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  outputs.tf  override.tf.example  providers.tf  step_function_definition.json.tftpl  terraform.tfvars.example  variables.tf
scripts/: README.md  check_s3_data.sh  clean_all.sh  generate_csv_reports.py  reset_environment.sh  run_all.sh  run_daily_test.sh  run_full_test.sh  run_full_test_suite.py  run_incremental_test.sh  run_lambda_local.py  setup_infra.sh  setup_podman_localstack.sh  simulate_step_function.py  test_step_function_real.sh  update_local_token.sh
services/: credly_badges_service.py  credly_templates_service.py
tests/: conftest.py  test_credly_services.py  test_lambda_handler.py  test_template_mapping.py
utils/: logger.py  observability.py  s3_writer.py
